fixed flex alignment

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -147,7 +147,6 @@ footer {
 
 .splash_content {
     display: flex;
-    align-items: center;
     justify-content: center;
     flex: 1;
     flex-direction: column;
@@ -162,13 +161,14 @@ footer {
         h1 {
             flex: 1;
             order: 1;
+            flex-basis: 100%;
         }
         .rotated_container {
             position: absolute;
             top: 0;
             left: 0;
             background-color: rgba(255, 255, 255, 0.15);
-            padding: 1em;
+            padding: 1.5em;
             h2 {
                 font-size: 1em;
                 white-space: nowrap;
@@ -182,6 +182,8 @@ footer {
         p {
             flex: 1;
             order: 2;
+            flex-basis: 100%;
+
         }
     }
     .about_link {
